# linguistics-capstone

./: .gitignore  flake.nix  ideas  paper.tex  proposal.tex  references.bib  sources
yoruba-ot/: Cargo.toml
yoruba-ot/src/: constraint.rs  main.rs  utils.rs
