[package]
name = "yoruba-ot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
unicode-segmentation = "1.10.1"
similar = { version = "2.2.1", features = ["unicode"] }
